<resources>
    <string name="app_name">Easy Hub</string>
    <string name="cache_and_network_unavailable">Network and cache is unavailable!</string>
    <string name="page_not_found">Page is not found!</string>
    <string name="unauthorized">UNAUTHORIZED!</string>

    <string name="just_now">just now</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours_ago</string>
    <string name="days_ago">days ago</string>

    <string name="no_network_msg">Loading the date failed, please check your network status and retry!</string>
    <string name="time_out_msg">Loading the date timeout, please check your network status and retry!</string>

    <!--登录界面编辑框hint-->
    <string name="name_error">Invalid user name!</string>
    <string name="pass_word_error">Invalid password!</string>
    <string name="login_btn_text">Login</string>
    <string name="login_page_hint">Login using your default browser(OAuth)</string>
    <string name="update_date_text">days ago</string>
    
    <!--主页面相关-->
    <string name="project_list">project list</string>
    <string name="drawer_layout_open">Open drawer</string>
    <string name="drawer_layout_close">Close drawer</string>

    <!--homepage navigation view-->
    <string name="nav_profile">Profile</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_issues">Issues</string>
    
    <!--他人项目页面相关-->
    <string name="menu_star">star</string>
    <string name="menu_setting">setting</string>

    <string name="loading">loading</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="warning">Warning</string>
    <string name="warning_logout">Confirm to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>

    <!--setting-->
    <string name="start_page">Start Page</string>

    <!--Profile-->
    <string name="joined_at">Joined at</string>

    <string name="created_comment_on_commit">Created comment on commit in %s</string>
    <string name="created_comment_on_issue">Created comment on issue %d in %s</string>
    <string name="created_repo">Created repository %s</string>
    <string name="forked_to">Forked %s to %s</string>
    <string name="starred_repo">Starred %s</string>
    <string name="push_to">Push to %s at %s</string>
    <string name="created_tag_at">Created tag %s at %s</string>
    <string name="created_branch_at">Created branch %s at %s</string>
    <string name="delete_tag_at">Delete tag %s at %s</string>
    <string name="delete_branch_at">Delete branch %s at %s</string>
    <string name="published_release_at">Published release %s at %s</string>
    <string name="opened_issue_at">Opened issue %d in %s</string>
    <string name="closed_issue_at">Closed issue %d in %s</string>
    <string name="reopened_issue_at">Reopened issue %d in %s</string>
    <string name="edited_issue_at">Edited issue %d in %s</string>
    <string name="assigned_issue_at">Assigned issue %d in %s</string>
    <string name="unassigned_issue_at">Unassigned issue %d in %s</string>
    <string name="labeled_issue_at">Labeled issue %d in %s</string>
    <string name="unlabeled_issue_at">Unlabeled issue %d in %s</string>
    <string name="milestoned_issue_at">Milestoned issue %d in %s</string>
    <string name="demilestoned_issue_at">Demilestoned issue %d in %s</string>
    <string name="added_member_to">Added member %s to %s</string>
    <string name="deleted_member_at">Deleted member %s at %s</string>
    <string name="edited_member_at">Edited member %s at %s</string>
    <string name="made_repo_public">Made %s public</string>
    <string name="org_blocked_user">Org %s blocked user %s</string>
    <string name="org_unblocked_user">Org %s unblocked user %s</string>
    <string name="created_pull_request_comment_at">Created pull request review comment at %s</string>
    <string name="deleted_pull_request_comment_at">Deleted pull request review comment at %s</string>
    <string name="edited_pull_request_comment_at">Edited pull request review comment at %s</string>
    <string name="submitted_pull_request_review_at">Submitted pull request review at %s</string>
    <string name="edited_pull_request_review_at">Edited pull request review at %s</string>
    <string name="dismissed_pull_request_review_at">Dismissed pull request review at %s</string>
</resources>
