<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/nav_profile"/>
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/notification"
            android:title="@string/nav_notifications"/>
        <item
            android:id="@+id/nav_issues"
            android:icon="@drawable/issues"
            android:title="@string/nav_issues"/>
    </group>

    <group
        android:id="@+id/setting"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:title="@string/setting"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about"/>
    </group>

    <group
        android:id="@+id/my_account"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:checkable="false"
            android:icon="@drawable/logout"
            android:title="@string/logout"/>
    </group>
</menu>